UPDATE: pom file to add more memory for maven testing UPDATE: error message on PROOFWORD that is taken as UNICODE ADD: bag symbols / toolkit