@@ -55,8 +55,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
+      <version>3.8.1</version>
     </dependency>
   </dependencies>
   <build>
@@ -122,6 +122,19 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <property>
+            <name>net.sourceforge.cobertura.datafile</name>
+            <value>target/cobertura/cobertura.ser</value>
+            </property>
+          </systemProperties>
+          <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
